--- a/assets/css/sass/general.scss
+++ b/assets/css/sass/general.scss
@@ -37,7 +37,7 @@
         z-index: 2;
         ul {
             li {
-                color: #9ea9ef;
+                color: #ccc;
                 font-size: 14px;
                 padding: 0;
                 float: none;
