--- a/assets/css/sass/general.scss
+++ b/assets/css/sass/general.scss
@@ -9,6 +9,35 @@
     }
 }
 
+/* Text meant only for screen readers. */
+.flocks-gd-screen-reader {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden; }
+
+.flocks-gd-screen-reader:focus {
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  color: #21759b;
+  display: block;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
+  /* Above WP toolbar. */
+}
+
 .geodir-breadcrumb {
     #breadcrumbs {
         width: 100%;
@@ -25,6 +54,15 @@
     border: none;
     border-left: 5px solid #EF5350;
     left: auto;
+    @extend .flocks-geodirectory-body-font;
+}
+.error_msg_fix {
+    @extend .err-no-rating;
+    background: #f6f8f9;
+    text-align: left;
+    strong {
+        font-weight: normal;
+    }
 }
 .geodir-note {
     color: #FFC107;
